<resources>
    <string name="log">Log</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="never_see_again">다시 보지 않기</string>
    <string name="request_permission">권한을 요청 할까요</string>
    <string name="setting">Setting</string>
    <string name="change_background_color">Change Background Color</string>
    <string name="change_text_size">Change Text Size</string>
    <string name="save_filter_keyword">Save Filter Keyword</string>
    <string name="add_to_search_filter">Add To Search Filter</string>
    <string name="enter_search_keyword">Enter Search Keyword</string>
</resources>